--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_22"]
 
 [phases.install]
-cmds = ["npm install -g corepack@0.24.1", "corepack enable", "pnpm install"]
+cmds = ["corepack enable", "corepack prepare pnpm@10.4.1 --activate", "pnpm install --frozen-lockfile"]
 
 [phases.build]
 cmds = ["pnpm run build"]
