fix: pass VITE_ env vars as build args in railway.toml

--- a/railway.toml
+++ b/railway.toml
@@ -2,4 +2,7 @@
 dockerfilePath = "Dockerfile"
 
 [build.args]
-CACHEBUST = "2026-01-22-v1"
+CACHEBUST = "2026-01-22-v2"
+VITE_SUPABASE_URL = "${{VITE_SUPABASE_URL}}"
+VITE_SUPABASE_ANON_KEY = "${{VITE_SUPABASE_ANON_KEY}}"
+VITE_OAUTH_PORTAL_URL = "${{VITE_OAUTH_PORTAL_URL}}"
